<resources>
    <string name="app_name">MatchMovies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_match_fragment">Hello match fragment</string>
    <string name="esqueceu_senha"> Não possui conta? Criar uma conta agora</string>
    <string name="rating">Avaliação:</string>
    <string name="trailer">Trailer</string>
    <string name="match">UnMatch</string>
    <string name="avaliar">Avaliar</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="provider">Onde assistir</string>
    <string name="forgot_password">Digite seu email cadastrado para recuperar a sua senha</string>
    <string name="email">Email</string>
    <string name="message_home">Qual vai ser o match de hoje?</string>
    <string name="message_home_movie">Filmes</string>
    <string name="message_home_season">Series</string>
    <string name="facebook_app_id">513587273003043</string>
    <string name="fb_login_protocol_scheme">fb513587273003043</string>


</resources>