<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        tools:context=".view.MovieDetailsActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_900"
            android:foreground="@drawable/ic_logo_horizontal"
            android:foregroundGravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

        <ImageView
            android:id="@+id/img_background"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:alpha="0.4"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:srcCompat="@drawable/anabele" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:accessibilityHeading="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_background"
            tools:text="Title exampleeeeeeeeeeeeweeeeeeeeeeeeeeeee" />

        <RatingBar
            android:id="@+id/rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:clickable="false"
            android:isIndicator="true"
            android:numStars="5"
            android:progressTint="#ff9901"
            app:layout_constraintBottom_toTopOf="@+id/btn_match"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="6dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/rating"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="7.8" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="6dp"
            android:textSize="12sp"
            app:drawableLeftCompat="@drawable/ic_baseline_date_range_24"
            app:layout_constraintStart_toEndOf="@+id/tv_vote_average"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="2014" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="6dp"
            android:textSize="12sp"
            android:visibility="gone"
            app:drawableLeftCompat="@drawable/ic_baseline_access_time_24"
            app:layout_constraintStart_toEndOf="@+id/tv_year"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="115 min" />

        <Button
            android:id="@+id/btn_trailer"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:drawableTop="@drawable/ic_baseline_local_movies_24"
            android:text="@string/trailer"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating" />

        <Button
            android:id="@+id/btn_match"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:layout_marginTop="4dp"
            android:drawableTop="@drawable/ic_baseline_favorite_24"
            android:text="@string/match"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/btn_trailer"
            app:layout_constraintTop_toBottomOf="@+id/rating" />

        <Button
            android:id="@+id/btn_evaluate"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:layout_marginTop="4dp"
            android:drawableTop="@drawable/ic_baseline_star_half_24"
            android:text="@string/avaliar"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/btn_match"
            app:layout_constraintTop_toBottomOf="@+id/rating" />

        <Button
            android:id="@+id/btn_share"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableTop="@drawable/ic_baseline_share_24"
            android:text="@string/compartilhar"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/btn_evaluate"
            app:layout_constraintTop_toBottomOf="@+id/rating" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_match"
            tools:text="Em Anabelle, John (Ward Horton) eeeeeeeeeeeeeeeeeeeeeeeeeeeeencontrou o presente perfeito para sua futura esposa, Mia (Annabelle Wallis): uma rara boneca antiga com um lindo vestido. Mia fica bastante contente com seu presente, porém, sua animação com a boneca não duraria muito tempo." />

        <LinearLayout
            android:id="@+id/layout_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gêneros"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview"
                tools:text="Terror, SuspenseTerror, SuspenseTerror, SuspenseTerror" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_director"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_genres">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Direção "
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.012"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_genres"
                tools:text="Fulano XXX, XXXFulano XXXFulano XXXFulano XXXFulano XXX" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_director">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Elenco  "
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_director"
                tools:text="Fulano XXX, YYYY, WWWW, WWWW WWWW" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:accessibilityHeading="true"
            android:text="@string/provider"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_cast" />

        <LinearLayout
            android:id="@+id/layout_provider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_provider" />

        <ImageView
            android:id="@+id/img_movie"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/img_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_background"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>